# llm-zoomcamp

./: 01_llm_zoomcamp.ipynb  pyproject.toml
module-1/: 01_llm_zoomcamp.ipynb
module-2/: 02_llm_zoomcamp.ipynb  Untitled.ipynb
module-2/qdrant_storage/: raft_state.json
module-2/qdrant_storage/collections/zoomcamp-rag/0/: newest_clocks.json  replica_state.json
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/3414dba2-bdb5-4406-bff6-cfd0d035d3c7/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/41231c8c-3e78-49f0-92e7-4730446eecac/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/41231c8c-3e78-49f0-92e7-4730446eecac/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/47cc3516-85da-4d0a-a3c0-25ff104250db/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/4c900a04-cdc6-45b6-a96c-3401d3d9a4f2/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/7bb18035-baee-4007-93a6-044285e29ae2/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/c1c1e87d-3b10-4b90-a367-e370fda36450/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
module-2/qdrant_storage/collections/zoomcamp-rag/0/segments/e59fe055-3959-4879-9168-038d867f76fc/payload_index/: IDENTITY  (+3 more)
(+4 files in other folders)
