[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch==8.13.0",
    "google-genai>=1.18.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.2",
    "notebook==7.1.2",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
